# crust-sworker

./: CMakeLists.txt
docs/: API.md
scripts/: install_deps.sh
src/: Config.json
src/app/config/: Config.cpp  Config.h
src/app/ecalls/: ECalls.cpp  ECalls.h  EUtils.cpp  EUtils.h  Json.h  Persistence.cpp  Persistence.h
src/app/http/: ApiHandler.h
src/app/process/: EnclaveData.cpp  EntryNetwork.cpp  Process.cpp  WorkReport.cpp
src/enclave/include/: Parameter.h
